// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tile Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              This is the default configuration of this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Tile__StyledTile-sc-15i01z6-0 cVFIOL"
          >
            <div
              className="TileHeader__StyledTileHeader-sc-1k1u3lr-0 dbRrBh"
              onClick={[Function]}
            >
              <div
                className="TileHeader__StyledTileTitle-sc-1k1u3lr-1 huhbMr"
              >
                <h3
                  className="Heading__StyledHeading-sc-1b8cso5-0 kyjUks"
                >
                  Urgent information
                </h3>
              </div>
              <div
                className="TileHeader__StyledIconRight-sc-1k1u3lr-4 gXAQYb"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Tile
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                clicked
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Urgent information
                              </span>
                              "
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile Expandable 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Expandable
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              This is the default configuration of this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Tile__StyledTile-sc-15i01z6-0 cVFIOL"
          >
            <div
              className="TileHeader__StyledTileHeader-sc-1k1u3lr-0 dbRrBh"
              onClick={[Function]}
            >
              <div
                className="TileHeader__StyledTileTitle-sc-1k1u3lr-1 huhbMr"
              >
                <div
                  className="TileHeader__StyledTileIcon-sc-1k1u3lr-2 cyphAm"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17.178 21l-4.104-7.835-4.104 4.104.373 2.612L8.223 21l-1.865-3.358L3 15.777l1.12-1.12 2.611.373 4.104-4.104L3 6.822 4.492 5.33l9.7 2.239 4.105-4.104a1.58 1.58 0 0 1 2.238 0c.62.619.62 1.619 0 2.238l-4.104 4.104 2.239 9.7L17.178 21z"
                    />
                  </svg>
                </div>
                <h3
                  className="Heading__StyledHeading-sc-1b8cso5-0 kyjUks"
                >
                  Expandable
                </h3>
              </div>
              <div
                className="TileHeader__StyledTileDescription-sc-1k1u3lr-3 cGzcea"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
              </div>
              <div
                className="TileHeader__StyledIconRight-sc-1k1u3lr-4 gXAQYb"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TileExpandable__StyledTileExpandable-notqy1-0 SlrAS"
            >
              <div>
                This is example of expanded content
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          Tile
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              icon
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Airplane /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              title
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Expandable
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              description
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Lorem ipsum dolor sit amet, consectetur adipiscing…
                                </span>
                                "
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          This is example of expanded content
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          Tile
                          &gt;
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile Expandable with custom description 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Expandable with custom description
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              This is the playground configuration of this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Tile__StyledTile-sc-15i01z6-0 cVFIOL"
          >
            <div
              className="TileHeader__StyledTileHeader-sc-1k1u3lr-0 dbRrBh"
              onClick={[Function]}
            >
              <div
                className="TileHeader__StyledTileDescription-sc-1k1u3lr-3 fseUel"
              >
                <div
                  className="Stack__StyledStack-sc-1t576ow-0 huvugl"
                >
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dJNjRc"
                  >
                    Mr. John Smith
                  </p>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dJNjRc"
                  >
                    20 kg
                  </p>
                </div>
              </div>
              <div
                className="TileHeader__StyledIconRight-sc-1k1u3lr-4 gXAQYb"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TileExpandable__StyledTileExpandable-notqy1-0 SlrAS"
            >
              <div>
                This is example of expanded content
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          Tile
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              description
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Stack /&gt;
                                </span>
                                }
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          This is example of expanded content
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          Tile
                          &gt;
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              This is the default configuration of this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="Tile__StyledTile-sc-15i01z6-0 cVFIOL"
            data-test="test"
            href="https://www.kiwi.com/"
          >
            <div
              className="TileHeader__StyledTileHeader-sc-1k1u3lr-0 dbRrBh"
              onClick={[Function]}
            >
              <div
                className="TileHeader__StyledTileTitle-sc-1k1u3lr-1 huhbMr"
              >
                <div
                  className="TileHeader__StyledTileIcon-sc-1k1u3lr-2 cyphAm"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17.178 21l-4.104-7.835-4.104 4.104.373 2.612L8.223 21l-1.865-3.358L3 15.777l1.12-1.12 2.611.373 4.104-4.104L3 6.822 4.492 5.33l9.7 2.239 4.105-4.104a1.58 1.58 0 0 1 2.238 0c.62.619.62 1.619 0 2.238l-4.104 4.104 2.239 9.7L17.178 21z"
                    />
                  </svg>
                </div>
                <h3
                  className="Heading__StyledHeading-sc-1b8cso5-0 kyjUks"
                >
                  Tile with title
                </h3>
              </div>
              <div
                className="TileHeader__StyledTileDescription-sc-1k1u3lr-3 cGzcea"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
              </div>
              <div
                className="TileHeader__StyledIconRight-sc-1k1u3lr-4 gXAQYb"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </div>
            </div>
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Tile
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                https://www.kiwi.com/
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                clicked
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                &lt;Airplane /&gt;
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Tile with title
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            description
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Lorem ipsum dolor sit amet, consectetur adipiscing…
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            external
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                test
                              </span>
                              "
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile RTL 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          RTL
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              This is a preview of this component in RTL setup.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Tile__StyledTile-sc-15i01z6-0 cVFIOL"
          >
            <div
              className="TileHeader__StyledTileHeader-sc-1k1u3lr-0 dbRrBh"
              onClick={[Function]}
            >
              <div
                className="TileHeader__StyledTileDescription-sc-1k1u3lr-3 bhhcKn"
              >
                <div
                  className="Stack__StyledStack-sc-1t576ow-0 kHrzZa"
                >
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 huZevl"
                  >
                    Mr. John Smith
                  </p>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 huZevl"
                  >
                    20 kg
                  </p>
                </div>
              </div>
              <div
                className="TileHeader__StyledIconRight-sc-1k1u3lr-4 sqokT"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="TileExpandable__StyledTileExpandable-notqy1-0 SlrAS"
            >
              <div>
                This is example of expanded content
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          RenderInRtl
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Tile
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                onClick
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#170",
                                      }
                                    }
                                  >
                                    clicked
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                description
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    &lt;Stack /&gt;
                                  </span>
                                  }
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            This is example of expanded content
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Tile
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          RenderInRtl
                          &gt;
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
